// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`semicolon.ts - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
abstract class C {
  abstract get;
  x() {}
}

=====================================output=====================================
abstract class C {
  abstract get;
  x() {}
}

================================================================================
`;

exports[`semicolon.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
abstract class C {
  abstract get;
  x() {}
}

=====================================output=====================================
abstract class C {
  abstract get;
  x() {}
}

================================================================================
`;
